--- a/assets/mainpage.css
+++ b/assets/mainpage.css
@@ -3,15 +3,16 @@
    background-color: #1d1d1d;
 }
 
-header {
+.header {
     position: fixed;
-    margin-top: -120px;
+    margin-top: -80px;
     margin-left: -20px;
     padding: 13px 100% .03px 11px;
     background-color: #161616;
     line-height:10px;
+    width: 100%;
+    z-index: 5;
 }
-
 
 #headertext {
 color: #A04668;
@@ -20,7 +21,7 @@ margin-left: 40px;
 }
 
 body {
-    margin-top: 120px;
+    margin-top: 80px;
 }
 
 h2{
@@ -37,12 +38,25 @@ color: #9a6f81;
 }
 a{
     color: #A04668;
+    float: right;
 }
+
+a:hover {
+    color: rgb(34, 133, 88);
+  }
 
 #darkbg{
     background-color: #161616; 
 }
 .inline {
-    display: inline;
-    padding-left: 15px;
+    float: left;
+    padding: 0 45px 0 0;
+}
+
+#raspberry {
+    object-fit: cover;
+    position: absolute;
+    right: 25px;
+    border-radius: 30px;
+    z-index: 2;
 }
