--- a/assets/mainpage.css
+++ b/assets/mainpage.css
@@ -60,3 +60,18 @@ a:hover {
     border-radius: 30px;
     z-index: 2;
 }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    margin-left: -20px;
+    padding: .03px 100% 13px 11px;
+    background-color: #161616;
+    line-height:10px;
+    width: 100%;
+    z-index: 5;
+}
+
+.centered {
+    text-align: center;
+}
