--- a/assets/contactpage.css
+++ b/assets/contactpage.css
@@ -2,18 +2,27 @@
     font-family:'Courier New';
     background-color: #1d1d1d;
  }
- 
- .header {
-     position: fixed;
-     margin-top: -80px;
-     margin-left: -20px;
-     padding: 13px 100% .03px 11px;
-     background-color: #161616;
-     line-height:10px;
-     width: 100%;
-     z-index: 5;
- }
- 
+ :root {
+    --Dark: #161616;
+    --DarkPink: #A04668;
+    --MidPink: #9a6f81;
+    --TextPink: #D9D0DE;
+    }
+    
+.header {
+    display: flex;
+    padding: 20px 20px 0 0;
+    margin-top: -30px;
+    margin-left: -13px;
+    width: 100%;
+    background: var(--Dark);
+    color: var(--DarkPink);
+    line-height: 20px;
+    z-index: 5;
+  }
+h1, #headertext {
+    justify-content: end;
+}
  #headertext {
  color: #A04668;
  background-color: #161616; 
@@ -21,7 +30,7 @@
  }
  
  body {
-     margin-top: 80px;
+     margin-top: 10px;
  }
  
  h2{
@@ -78,8 +87,16 @@ label {
     display: block;
  }
 
+ .emailbox {
+    height: 120px;
+    width: 200px;
+    word-wrap: break-word;
+    word-break: break-all;
+ }
+
  #buttonemail {
     padding: 3px;
     margin-top: 15px;
     color: #D9D0DE;
+    display: block;
  }
