--- a/assets/mainpage.css
+++ b/assets/mainpage.css
@@ -11,8 +11,9 @@
 
 .header {
     display: flex;
+    position:fixed;
     padding: 20px 20px 0 0;
-    margin-top: -30px;
+    margin-top: -100px;
     margin-left: -13px;
     width: 100%;
     background: var(--Dark);
@@ -28,18 +29,18 @@ margin-left: 30px;
 }
 
 body {
-    margin-top: 10px;
+    margin-top: 80px;
 }
 
 h2{
 margin-bottom: -15px;
-margin-left: 40px;
+margin-left: 90px;
 color: var(--MidPink);
 }
 
 .text {
     color: var(--TextPink);
-    margin-left: 55px;
+    margin-left: 135px;
     margin-bottom: -10px;
     line-height: 20px;
 }
@@ -65,7 +66,7 @@ a:hover {
     position: absolute;
     right: 25px;
     border-radius: 30px;
-    z-index: 2;
+    z-index: 0;
 }
 
 .capraspberry {
@@ -73,7 +74,7 @@ a:hover {
     right: 65px;
     top: 400px;
     padding: 4px;
-    z-index: 2;
+    z-index: 0;
     color: var(--TextPink);
     border-bottom: 2px dotted var(--DarkPink);
 }
