--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -127,3 +127,8 @@ section ul li a {
     background-color: var(--Dark);
     color: var(--DarkPink)
 }
+
+.paddingbottom {
+    padding-bottom: 45px;
+    margin-left: 50px;
+}
